<resources>
    <string name="app_name">COVIDTrackerAssignment</string>
    <string name="text_header">COVID TRACKER</string>
    <string name="question_text">YES</string>
    <string name="q1">Have you experienced any of the common symptoms of COVID 19?</string>
    <string name="q2">Have you, within the last ten days, experienced an internal temperature of 100.4°?</string>
    <string name="q3">Have you come in close contact with someone with a suspected or confirmed case of COVID-19?</string>
    <string name="q4">Have you travelled outside the country within the past 10 days?</string>
    <string name="q5">Do you affirm that all of your selections are the complete and honest truth?</string>
    <string name="truth_msg">You cannot submit this form unless you answer at least one question.</string>
    <string name="no_name_msg">Please enter your name before submitting the form</string>
    <string name="safe_msg">You are safe to enter work/school.</string>
    <string name="get_results">Get Results</string>
    <string name="time_remaining"> </string>
    <string name="name_box">Enter your name here</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_text_str">Enter your name here:</string>
    <string name="countermsg"> </string>
    <string name="msg">msg</string>
    <string name="passed_string">, you are clear to enter school/work for the day. Have a good day!</string>
    <string name="failed_msg">, you have failed. Please self quarantine until you pass the test for 10 days in a row.</string>
    <string name="counter_str"> days to go until you can enter.</string>
    <string name="time_str">, please wait until tomorrow to enter the form again.</string>
    <string name="return_to_first_form">RETURN TO FIRST FORM</string>
</resources>